实现总线式端口拓扑图功能
- 修改后端API支持总线式端口分组逻辑
- 更新前端实现总线式布局和视觉效果
- 添加端口悬停信息显示功能
- 完成测试和优化工作
- 更新相关设计文档

--- a/docs/拓扑图功能开发计划.md
+++ b/docs/拓扑图功能开发计划.md
@@ -34,6 +34,184 @@
    - 端口信息显示（熔丝、空开规格等）
    - 端口搜索和筛选功能
    - 端口状态可视化（已连接/空闲）
+   - **总线式端口显示方案**（重点功能）
+
+### 总线式端口拓扑图设计方案
+
+#### 设计目标
+
+解决当前端口级拓扑图中每个端口都是独立节点导致的连接复杂、视觉混乱问题，实现专业、清晰的总线式端口显示效果。
+
+#### 核心设计理念
+
+1. **按电流方向分组**：区分端口的输入和输出方向，对应连接表中的"上下游"关系
+2. **总线化显示**：熔丝和空开不区分类型，按数量（例如每10个）排列到总线上
+3. **层次化布局**：设备 → 总线 → 端口的三层结构
+4. **专业视觉效果**：使用不同图标区分熔丝和空开，清晰的连接线样式
+
+#### 技术实现架构
+
+**数据结构设计**：
+
+```javascript
+// 总线节点数据结构
+const busNode = {
+    id: `${deviceId}_bus_${direction}_${groupIndex}`, // 如: "device1_bus_input_1"
+    type: 'bus',
+    deviceId: 'device1',
+    direction: 'input', // 'input' 或 'output'
+    groupIndex: 1,
+    portCount: 10,
+    label: '输入总线1 (10端口)',
+    x: calculatedX,
+    y: calculatedY
+};
+
+// 端口节点数据结构
+const portNode = {
+    id: `${deviceId}_port_${portType}_${portNumber}`, // 如: "device1_port_F_1"
+    type: 'port',
+    deviceId: 'device1',
+    busId: 'device1_bus_input_1',
+    portType: 'F', // 'F'(熔丝) 或 'BL'(空开)
+    portNumber: 1,
+    label: 'F1',
+    specification: '63A', // A端额定电流
+    direction: 'input',
+    x: calculatedX,
+    y: calculatedY
+};
+```
+
+**布局算法**：
+
+1. **设备层**：设备节点居中放置
+2. **总线层**：
+   - 输入总线位于设备左侧
+   - 输出总线位于设备右侧
+   - 垂直排列多条总线
+3. **端口层**：
+   - 端口节点沿总线水平排列
+   - 每条总线最多显示10个端口
+   - 超过10个端口自动创建新总线
+
+**连接关系**：
+
+1. **设备到总线**：虚线连接，表示逻辑归属
+2. **总线到端口**：实线连接，表示物理连接
+3. **端口到端口**：普通连接线，表示实际电气连接
+
+#### 视觉设计规范
+
+**节点样式**：
+
+```css
+/* 设备节点 */
+.device-node {
+    shape: 'box';
+    color: { background: '#E3F2FD', border: '#1976D2' };
+    font: { size: 14, color: '#1976D2' };
+}
+
+/* 总线节点 */
+.bus-node {
+    shape: 'box';
+    color: { background: '#F3E5F5', border: '#7B1FA2' };
+    font: { size: 12, color: '#7B1FA2' };
+    width: 120;
+    height: 30;
+}
+
+/* 熔丝端口节点 */
+.fuse-port-node {
+    shape: 'circle';
+    color: { background: '#FFECB3', border: '#F57C00' };
+    size: 20;
+    font: { size: 10 };
+}
+
+/* 空开端口节点 */
+.breaker-port-node {
+    shape: 'square';
+    color: { background: '#E8F5E8', border: '#388E3C' };
+    size: 20;
+    font: { size: 10 };
+}
+```
+
+**连接线样式**：
+
+```css
+/* 设备到总线连接 */
+.device-to-bus {
+    dashes: [5, 5];
+    color: '#9E9E9E';
+    width: 1;
+}
+
+/* 总线到端口连接 */
+.bus-to-port {
+    color: '#424242';
+    width: 2;
+}
+
+/* 端口间连接 */
+.port-to-port {
+    color: '#D32F2F';
+    width: 2;
+    arrows: 'to';
+}
+```
+
+#### 交互功能设计
+
+1. **端口悬停信息**：
+   - 显示端口名称（如"F1"、"BL2"）
+   - 显示规格信息（"A端额定电流: 63A"）
+   - 显示连接状态
+
+2. **总线交互**：
+   - 点击总线高亮所有相关端口
+   - 显示总线端口统计信息
+
+3. **设备交互**：
+   - 点击设备显示所有端口信息
+   - 支持折叠/展开端口显示
+
+#### 实现优先级
+
+**第一阶段**（核心结构）：
+1. 实现总线节点和端口节点的数据结构
+2. 实现基础的三层布局算法
+3. 实现端口按方向和数量的自动分组
+
+**第二阶段**（视觉优化）：
+1. 完善节点和连接线的视觉样式
+2. 实现熔丝和空开的图标区分
+3. 优化布局算法，处理大量端口的情况
+
+**第三阶段**（交互增强）：
+1. 实现端口悬停信息显示
+2. 添加总线和设备的交互功能
+3. 实现端口搜索和筛选功能
+
+#### 技术挑战与解决方案
+
+**挑战1：大量端口的布局优化**
+- 解决方案：动态计算总线数量，自适应调整节点间距
+
+**挑战2：复杂连接的可读性**
+- 解决方案：使用颜色编码和连接线分层显示
+
+**挑战3：不同设备类型的适配**
+- 解决方案：基于设备类型的端口分组规则配置
+
+#### 预期效果
+
+1. **专业性**：符合电力系统工程师的查看习惯
+2. **清晰性**：层次分明，连接关系一目了然
+3. **可扩展性**：支持60+端口设备的良好显示
+4. **交互性**：丰富的悬停和点击交互功能
 
 2. **设备级拓扑图**
    
