fix(frontend): 修复端口级拓扑图在自动切换总线布局时因无参调用导致deviceId丢失的问题；为loadTopologyData增加deviceId兜底并修正调用参数，避免渲染中断。

--- a/docs/总线式端口拓扑图数据结构设计.md
+++ b/docs/总线式端口拓扑图数据结构设计.md
@@ -249,6 +249,15 @@ def determine_port_direction(device_type, port_name, connections):
     return 'bidirectional'
 ```
 
+## 5. V2 确认规则（新增）
+
+- 命名：端口名称一律使用原始 port_name 字段；任何场景不得重命名或翻译。
+- 文案：未连接/断开态/N/A 统一呈现为“空闲”。
+- 布局：设备居中；输入左、输出右；双向端口按序号均分左右；对端端口与A端端口同Y对齐。
+- 边样式：设备→端口为灰色无箭头；端口↔端口为高亮实线带箭头；支持平行边避让。
+- Tooltip：端口类型(type)、规格(spec)、方向(direction)、连接到、对端端口、电缆型号/备注（如有）。
+- API 契约：GET /graph_data/{device_id}?level=port&layout=bus&show_all_ports=0|1。
+
 ## 5. 数据转换流程
 
 ### 5.1 从现有数据生成总线式结构
