--- a/docs/拓扑图功能开发计划.md
+++ b/docs/拓扑图功能开发计划.md
@@ -208,6 +208,13 @@ const portNode = {
 
 #### 预期效果
 
+#### V2确认规则（已确认，需严格执行）
+- 文案：未连接端口统一显示“空闲”，不再使用“断开态”。
+- 端口名：严格采用用户提交的原始 port_name，不做重命名/翻译/裁剪。
+- 布局：输入左、输出右、双向均分；仅显示有连接端口，提供“显示所有端口”开关。
+- 样式：设备→端口灰线无箭头；端口↔端口高亮带箭头。
+- Tooltip：包含类型、规格、方向、连接到、对端端口、电缆信息（如有）。
+
 1. **专业性**：符合电力系统工程师的查看习惯
 2. **清晰性**：层次分明，连接关系一目了然
 3. **可扩展性**：支持60+端口设备的良好显示
