备份：拓扑图功能修复前的状态 - Canvas尺寸修复已完成

--- a/docs/端口拓扑图设计规范.md
+++ b/docs/端口拓扑图设计规范.md
@@ -63,12 +63,13 @@
 - 提供"只显示在用端口"选项：仅显示有连接关系的端口
 
 ### 5.2 悬停提示
-- 鼠标悬停在连接线上时，显示电缆型号等信息
+- 鼠标悬停在连接线上时，显示连接详情（至少包含：电缆型号、备注）
 - 鼠标悬停在节点上时，显示设备或端口的详细信息
 
 ### 5.3 点击交互
 - 点击节点可查看详细信息
 - 点击连接线可查看连接详情
+- 连接详情至少包含：电缆型号、备注；后续可按需扩展
 
 ### 5.4 拖拽功能
 - 用户可以拖拽节点或连接线进行调节
@@ -90,3 +91,22 @@
 ### 6.2 视觉层次
 - 通过颜色、形状等视觉元素区分不同类型的节点和连接线
 - 确保拓扑图整体清晰易读
+
+## 7. 性能与渐进渲染
+- 适用阈值：当本端设备端口数量 > 30 时，启用渐进渲染（阈值可通过配置调整）。
+- 渐进策略：
+  - 第一步：优先渲染设备与端口节点及其标签；
+  - 第二步：按批次（如每批 20 条）渲染连接线与箭头；
+  - 悬停/点击细节采用延迟绑定，避免首屏大量事件注册；
+  - 降低阴影/动画等开销以保证交互流畅。
+- 布局稳定性：首次计算布局后固定节点位置，避免重排抖动。
+- 大图优化：当连接线数量 > 50 时，默认隐藏边标签，交互时临时显示。
+
+## 8. 导出与主题
+- 导出能力：支持一键导出为 SVG，确保矢量无损、文本可选中、样式内联，便于外部文档嵌入。
+- 主题与配色：默认采用深色系主题，以提升对比度与可读性：
+  - 背景：#0F1220；文本：#E6E9EF；网格/辅助线：#2B2F3A；
+  - 交流电缆：#F0C419（金黄）；直流电缆：#E74C3C（红）；空闲：#7F8C8D（灰）；
+  - 对比度满足可读性（AA 级）优先；预留主题切换能力。
+- 导出一致性：导出 SVG 与屏显一致；导出时自动去除交互句柄与 hover 高亮等临时样式。
+- 文件命名：port-topology-<device-name>-<yyyyMMdd-HHmmss>.svg。
