备份：修复端口拓扑图连线缺失和伪造对端设备端口问题前的代码状态

--- a/docs/端口拓扑图设计规范.md
+++ b/docs/端口拓扑图设计规范.md
@@ -110,3 +110,42 @@
   - 对比度满足可读性（AA 级）优先；预留主题切换能力。
 - 导出一致性：导出 SVG 与屏显一致；导出时自动去除交互句柄与 hover 高亮等临时样式。
 - 文件命名：port-topology-<device-name>-<yyyyMMdd-HHmmss>.svg。
+# 端口拓扑图设计规范
+
+## 一、核心数据来源与行语义
+- 数据源为用户上传的“连接”表；一行代表一个“端口占用情况”。
+- 每行的 A 端仅会出现一个“空开或熔丝”（即一个端口）。
+- 若该端口在用，则同一行会出现对应的 B 端设备的“空开或熔丝”（对端端口），且“电缆类型”字段会有值。
+- 若该端口空闲，则同一行“B 端空开/熔丝”和“电缆类型”字段均为空。
+
+## 二、连线绘制规则（严格按行）
+- 仅当“电缆类型”字段不为空时，绘制端口到端口的连线：连接该行的 A 端端口与 B 端端口。
+- 当“电缆类型”字段为空时，不绘制任何连线，仅绘制该行的 A 端端口节点。
+- 禁止任何“自动匹配/自动补线”行为；不得根据布局或推断补画边。
+
+## 三、箭头方向规则（上下游）
+- 读取该行“上下游”字段：
+  - “上游”：箭头从 A 端指向 B 端。
+  - “下游”：箭头从 B 端指向 A 端。
+- 前端不得覆盖后端提供的箭头方向；若后端未提供，则默认箭头指向 `to` 节点（由后端的 `from/to` 定义决定）。
+
+## 四、渲染可视风格（最小要求）
+- 连线统一以醒目描边渲染（当前为红色、线宽≥4）以确保可见性；颜色策略可根据“交流/直流”等后续规范拓展，但不影响上述连线与箭头规则。
+- 端口节点始终可见；当行为空闲（电缆类型为空）时，仅显示 A 端端口节点。
+
+## 五、服务重启与端口约定
+- 修复或更新代码后，重启服务一律使用 `8009` 端口。
+- 若 `8009` 端口被占用：先杀掉占用该端口的进程，再以 `8009` 端口重启服务。
+- 重启流程示例（Windows 环境）：
+  - 查询端口占用：`netstat -ano | findstr :8009`
+  - 杀进程：`taskkill /F /PID <占用PID>`
+  - 启动服务（示例）：`python run.py`（确保服务监听 `8009`）
+
+## 六、实现要点（前后端协同）
+- 后端：按行构造 `from/to` 端口及 `arrows`（基于“上下游”）；仅当“电缆类型”非空时输出该条边。
+- 前端：
+  - 过滤：仅渲染 `cable_type/cable_model` 非空的边。
+  - 箭头：优先尊重后端边对象中的 `arrows`，不要强行覆盖。
+  - 禁用任何自动补线逻辑，保持与数据一致。
+
+以上规则为强约束，任何偏离将导致拓扑与数据不一致。
