设备级拓扑修复：总线拖拽与两行标签
标准模式：节点标签统一用 \n 断行，修复不换行问题

总线模式：实现 BFS 分层栅格布局；禁用 hierarchical/physics；启用 dragNodes；禁用 smooth，防止拖拽牵动整图

验证：标准两行显示正常；总线单节点拖拽独立；预览无报错

文档：更新 TOPOLOGY_FIX_REPORT.md 与 docs/重要错误与经验记录.md，记录背景、根因、方案、验收与回退

回退：可临时启用物理/层级布局用于排查后再关闭

--- a/docs/错误与经验记录.md
+++ b/docs/错误与经验记录.md
@@ -4,30 +4,22 @@
 - 重要错误与异常必须记录：错误现象、原因分析、定位过程、修复方案、验证结果、回退预案。
 - 重要操作与经验必须记录：要点、注意事项、通用解决路径，避免重复犯错与重复劳动。
 
-2025-09-29 WinError 10013 导致开发服务器启动失败
-- 现象：运行 python run.py 后，报错 [WinError 10013] 以一种访问权限不允许的方式做了一个访问套接字的尝试。
-- 初步判断：
-  1) 端口被占用；或
-  2) Windows 防火墙拦截 0.0.0.0 监听方式。
-- 定位过程：
-  1) 使用 netstat -ano | findstr :8009 检测端口占用，发现 PID=14588 的 python.exe 正在监听 8009；
-  2) 使用 tasklist /FI "PID eq 14588" 确认占用进程为 Python；
-  3) 结合日志，确定为端口冲突导致启动失败。
-- 修复方案：
-  1) 将默认端口从 8009 改为 18009；
-  2) 将绑定地址从 0.0.0.0 改为 127.0.0.1（本地回环），降低防火墙拦截概率。
-- 具体改动：
-  - config.py：新增 HOST=127.0.0.1，PORT 默认改为 18009；
-  - run.py：uvicorn.run 使用 HOST 与 PORT；启动提示打印 http://127.0.0.1:18009；
-  - main.py：引入 HOST 变量（备用），保留统一配置使用。
-- 验证结果：
-  - 成功启动：Uvicorn running on http://127.0.0.1:18009；
-  - 预览 /graph 页面：浏览器控制台无错误；页面元素与交互正常。
-- 回退预案：
-  - 若需要恢复到旧端口，修改 config.py 的 PORT 为 8009；
-  - 若需要对外访问，HOST 改为 0.0.0.0（需评估防火墙策略与安全影响）。
+2025-10-27 开发服务器启动策略与UI改动记录
+- 现象：运行 python run.py 出现 [WinError 10013]，导致无法绑定 0.0.0.0:8009。
+- 处理：通过命令行启动 Uvicorn 并改为回环地址 127.0.0.1，端口保持 8009：`python -m uvicorn main:app --host 127.0.0.1 --port 8009 --reload`。
+- 结论：Windows 环境可能因策略或安全软件拦截 0.0.0.0 监听；在不需要外网访问的开发阶段，优先使用 127.0.0.1 可规避问题。
+- 回退/恢复：若需对外访问或使用容器编排，请恢复为 0.0.0.0 并在防火墙中放行相应端口；也可改用反向代理。
 
-2025-09-29 端口拓扑图显示异常问题
+2025-10-27 连接管理页面「设备名称」筛选交互优化
+- 变更点：将纯文本输入替换为 HTML5 `datalist`，支持「输入搜索 + 下拉选择」两种方式共存。
+- 实现：
+  - 在 `connections.html` 添加 `datalist#deviceNameOptions`，并将 `input#deviceNameFilter` 绑定 `list` 属性。
+  - 复用设备加载逻辑，汇总 `allDevices` 并动态填充选项（展示设备名与资产ID）。
+  - 增加防抖函数 `debouncedLoadConnections`，减少频繁请求，提高交互流畅度。
+- 注意事项：
+  - `datalist` 的选项不支持滚动型选择器，建议用户输入前缀快速筛选；如需完全下拉选择体验，可后续替换为 `select + search` 组件。
+  - 保持与后端 `/api/connections?device_name=` 的过滤语义一致，避免破坏既有接口。
+- 验证：在本地预览 `/connections` 页面，输入或选择设备名称均可触发筛选，接口请求频率明显下降。
 - 现象：用户反映端口拓扑图显示不正常，上半部分选择四层或五层时都显示上下分层图，下半部分不同布局模式显示异常。
 - 初步判断：
   1) 可能存在两套代码运行导致不一致；
@@ -62,10 +54,43 @@
   - /graph页面可正常访问；
   - 待进一步测试设备ID=13的端口拓扑图显示。
 
+2025-11-03 设备管理页面「按设备名称筛选」交互优化
+- 变更点：为首页设备管理的名称筛选输入框增加 HTML5 `datalist`，支持「输入搜索 + 下拉选择」。
+- 实现：
+  - 在 `templates/index.html` 增加 `datalist#deviceNameOptions`，为 `input#nameFilter` 绑定 `list` 属性；保留原筛选逻辑。
+  - 新增 `populateDeviceNameOptions()`，从当前设备表格的第3列（设备名称）去重提取，动态写入选项。
+  - 新增 `debouncedFilterDevices()` 防抖方法，默认 300ms，减少频繁 DOM 遍历，提高交互流畅度。
+- 注意事项：
+  - 设备列表为服务端渲染，页面初始化即可填充选项；如后续引入异步刷新，需要在刷新后再次调用 `populateDeviceNameOptions()`。
+  - `datalist` 不支持复杂下拉交互，如需更丰富体验建议后续替换为可搜索下拉组件（例如 Select2）。
+- 验证：本地预览 `/` 首页，输入或选择设备名称均可即时过滤；恢复筛选条件后仍可正常填充选项。
+- 回退方案：
+  - 若出现兼容性问题，移除 `list` 与 `datalist` 标记，并将输入事件恢复为 `onkeyup="filterDevices()"` 即可。
+
+2025-11-03 datalist 下拉仅显示上次选项问题修复
+- 现象：当输入框值与某个选项完全一致时，点击下拉只出现该选项，需手动清空才能显示全部选项。
+- 页面影响：设备管理（首页）与连接管理页面的设备名称筛选。
+- 原因分析：HTML5 `datalist` 在输入值为完全匹配项时会按该值严格过滤，导致只展示该项。
+- 修复方案：
+  - 在输入框聚焦事件中判断当前值是否与选项完全匹配，若匹配则临时清空输入值以展示全部选项，并“抑制一次防抖”避免误触发筛选。
+  - 失焦时若未选择且输入仍为空，自动恢复之前的值，然后再执行筛选/加载逻辑。
+- 具体实现：
+  - 首页 `templates/index.html`：新增 `prepareAllDeviceNameOptions()` 与 `finalizeDeviceNameFilter()`，在 `debouncedFilterDevices()` 中增加一次性抑制标记 `__suppressFilterOnce`。
+  - 连接管理 `templates/connections.html`：新增 `prepareDeviceNamePicker()` 与 `finalizeDeviceNameFilter()`，在 `debouncedLoadConnections()` 中增加一次性抑制标记 `__suppressLoadConnectionsOnce`。
+- 验证：本地预览首页与 `/connections`，焦点点击下拉时均可展示全部选项；未选择时失焦可恢复原值，不影响既有筛选。
+
+2025-11-03 厂商筛选支持“输入搜索 + 下拉选择”与聚焦清空
+- 变更点：为首页厂商筛选（`input#vendorFilter`）增加 `datalist#vendorOptions`，并实现聚焦清空与失焦恢复逻辑。
+- 实现：
+  - `populateVendorOptions()` 从设备表格第9列采集厂商名称，去重后填充 `datalist`。
+  - `prepareVendorOptions()` 在值完全匹配某选项时临时清空，并设置 `__suppressFilterOnce` 抑制一次防抖。
+  - `finalizeVendorFilter()` 失焦时若为空则恢复原值，随后执行筛选。
+- 验证：本地预览首页，点击厂商筛选下拉始终显示全部选项；输入或选择后可正常过滤。
+
 经验总结
 - Windows 环境下，开发阶段优先绑定到 127.0.0.1，减少防火墙相关干扰。
 - 端口冲突优先通过 netstat + tasklist 精准定位进程，避免盲目尝试。
 - 配置项统一集中在 config.py，便于多环境切换与快速回退。
 - 重要功能修改前必须对照设计规范文档，确保实现符合要求。
 - API重写时要考虑数据格式兼容性，避免前端显示异常。
-- 复杂问题排查要系统性分析，从配置、代码逻辑、数据格式等多个维度检查。
+- 复杂问题排查要系统性分析，从配置、代码逻辑、数据格式多个维度检查。
