docs(user-manual): 对齐模板重构并细化内容\n\n- 校正用户角色与权限边界（系统管理员/资产管理员/运维工程师/观察者）\n- 新增设备生命周期管理模块（事件类型、校验规则、操作步骤、附件）\n- 各模块补充操作步骤、字段说明与错误提示\n- 更正本地预览地址为 http://127.0.0.1:8000/topology\n- 在《错误与经验记录.md》记录本次修订背景与措施\n\n备注：本提交仅涉及文档修订，未改动代码。

--- a/docs/动力资源管理系统用户手册.md
+++ b/docs/动力资源管理系统用户手册.md
@@ -3,67 +3,68 @@
 文档编号：DRMS-UM-001  
 文档版本：V1.0  
 软件全称：动力资源管理系统 V1.0  
-申请主体：——（请填写单位/个人全称，与登记一致）  
-著作权人：——（请填写，与登记信息一致）  
-开发完成日期：——（YYYY-MM-DD，与登记一致）
+申请主体：邱立胜  
+著作权人：邱立胜  
+开发完成日期：2025-11-06
 
 ---
 
 ## 修订记录
 - 2025-11-06：V1.0 首版，覆盖系统概述、架构、安装部署、使用指南、数据模型、接口概览、故障排除与软著一致性清单。
+- 2025-11-07：V1.0 修订，对齐角色模型，新增设备生命周期管理模块，细化各模块操作步骤，并更正本地预览地址。
 
 ---
 
 ## 1. 引言
 - 文档目的：本手册面向系统最终用户与审查人员，完整说明动力资源管理系统的功能、操作方法、技术架构与运行环境，并作为计算机软件著作权登记的“文档鉴别材料”。
-- 读者对象：项目利益相关者（运维、资产管理员、网络管理员、审查人员、实施与客服人员）。
+- 读者对象：项目利益相关者（系统管理员、资产管理员、运维工程师、观察者/审计、审查人员、实施与客服人员）。
 - 适用范围：适用于 V1.0 版本的网页端系统；若版本更新，请同步更新本手册以保持一致性。
 - 术语与缩写：
-  - 设备：供电相关设备，如配电柜、UPS、变压器等。
-  - 拓扑：设备或端口之间的连接关系的可视化图。
-  - 总线模式：以总线/分层的方式组织图形，使设备按层级横向或纵向排列。
-  - 标准模式：自由布局/非层级的设备拓扑显示模式。
-- 参考与合规说明：本手册编写参考了近期软著登记材料要求（用户手册需包含功能模块、操作步骤、技术特点，建议导出 PDF；文档页数一般需前后各 30 页、不足 60 页则提交全文；每页不少于约 30 行文字；源代码材料前 30 页与后 30 页、每页约 50 行）[参考：CSDN教程与行业平台总结；以版权中心最新在线填报指引为准]。
+  - 设备：供电相关设备，如配电柜、蓄电池、开关电源、UPS、变压器等。
+  - 拓扑：设备或端口之间连接关系的可视化图。
+  - 总线模式：以分层栅格的方式组织布局，使设备按层级横向或纵向排列。
+  - 标准模式：自由布局/非层级的拓扑显示模式。
+- 参考与合规说明：本手册编写参考近期软著登记材料要求（用户手册需包含功能模块、操作步骤、技术特点；文档页数一般需前后各 30 页、不足 60 页则提交全文；每页不少于约 30 行文字；源代码材料前 30 页与后 30 页，每页约 50 行）。
 
 ---
 
 ## 2. 系统概述
 - 目标与价值：
-  - 统一管理动力资源设备与连接关系，支持设备台账与拓扑可视化。
+  - 统一管理动力资源设备与连接关系，支持设备台账、生命周期记录与拓扑可视化。
   - 提供端口级与设备级两种拓扑视图，便于排障与运维协同。
-  - 支持数据导入与基础分析，提升运维效率与准确性。
-- 用户角色与利益相关者：
-  - 管理员：系统配置、权限管理、数据导入与全局维护。
-  - 运维人员：查看与维护拓扑、设备信息、连接关系。
-  - 观察者/审计：只读查看页面与报表。
-  - 业务方与验收方：关注系统稳定性与数据准确性。
-- 业务范围：设备资产管理、连接管理、拓扑展示（设备级、端口级）、基础分析看板、数据导入与校验。
-- 非功能性需求（目标）：
-  - 性能：常规设备规模（千级节点、万级边以内）可正常渲染与交互。
-  - 可用性：页面操作直观、支持拖拽与筛选；关键操作有提示与确认。
-  - 安全性：用户分权访问；仅管理员可变更拓扑与基础数据。
-  - 可维护性：代码与文档保持一致，拓扑交互可控、支持坐标固定与布局回退策略。
+  - 支持数据导入、连接维护与基础分析，提升运维效率与准确性。
+- 用户角色与权限边界：
+  - 系统管理员：账号与权限配置、系统参数、数据字典与备份；审批批量导入与全局变更；可配置拓扑全局策略。
+  - 资产管理员：设备台账维护、标准命名、图标绑定与分组；审核生命周期事件（建档/退役等）；可批量导入设备数据。
+  - 运维工程师：拓扑查看与维护、连接管理、端口级检查与布局微调；记录维保/故障/更换等生命周期事件。
+  - 观察者/审计：只读查看拓扑与报表，无法修改数据；用于验收与审计场景。
+- 业务范围：设备管理、连接管理、拓扑展示（设备级、端口级）、设备生命周期管理、分析看板、数据导入与校验。
+- 非功能性目标：
+  - 性能：常规规模（千级节点、万级边以内）可正常渲染与交互。
+  - 可用性：操作直观，支持拖拽与筛选；关键操作有提示与确认。
+  - 安全性：分权访问；仅有权限的角色可变更拓扑与基础数据。
+  - 可维护性：代码与文档一致；拓扑交互可控，支持坐标固定与布局回退策略。
 
 ---
 
 ## 3. 技术架构与部署
 - 架构总览：
   - 前端：HTML/CSS/JavaScript；拓扑可视化使用 `vis-network`；页面模板位于 `templates/`，静态资源在 `static/`。
-  - 后端：Python（参考 `main.py`、`preview_server.py` 与相关模块），提供 API 与页面渲染。
-  - 数据层：基于 `models.py` 定义的数据结构（设备、端口、连接等），具体持久化策略可接入关系型数据库。
+  - 后端：Python（参考 `main.py`、`preview_server.py` 与相关模块），提供 API 与页面渲染（FastAPI/Starlette + Uvicorn）。
+  - 数据层：基于 `models.py` 定义的数据结构（设备、端口、连接等），可接入关系型数据库以持久化。
 - 关键模块：
-  - 拓扑前端脚本：`static/js/topology_device.js`、`static/js/topology_global.js`、`static/js/topology_ports.js`。
-  - 页面入口：`templates/topology.html`（拓扑页）、`templates/connections.html`（连接管理）、`templates/index.html`（首页）。
+  - 拓扑脚本：`static/js/topology_device.js`、`static/js/topology_global.js`、`static/js/topology_ports.js`。
+  - 页面入口：`templates/topology.html`（拓扑页）、`templates/connections.html`（连接管理）、`templates/index.html`（首页）、`templates/lifecycle_management.html`（设备生命周期）。
 - 运行环境：
   - 客户端：现代浏览器（Chrome/Edge 最新版）。
-  - 服务器：Windows 10/11 或 Linux；Python 3.10+；建议内存≥4GB，磁盘≥40GB。
+  - 服务器：Windows 10/11 或 Linux；Python 3.10+；建议内存≥4GB、磁盘≥40GB。
 - 启动与预览：
   - 本地开发：`python -m uvicorn preview_server:app --host 127.0.0.1 --port 8000`
   - 访问地址：`http://127.0.0.1:8000/topology`
-  - Docker（可选）：参考 `docker-compose.yml` 编排部署（如需）。
-- 部署拓扑说明：
-  - 标准模式：自由拖拽、两行标签（使用 `\n` 断行）。
-  - 总线模式：使用 BFS 分层栅格布局并关闭物理引擎，支持单节点拖拽且不会牵动整图。
+  - Docker（可选）：参考 `docker-compose.yml` 编排部署。
+- 拓扑显示模式说明：
+  - 标准模式：自由拖拽，两行标签（使用 `\n` 断行）。
+  - 总线模式：BFS 分层栅格布局并关闭物理引擎；单节点拖拽不牵动整图；直线边提高可读性。
 
 ---
 
@@ -71,7 +72,7 @@
 - 获取源码：从远端仓库 `origin/main` 拉取最新代码。
 - 环境准备：
   - 安装 Python 3.10+ 与必要依赖（如 `uvicorn`、`fastapi`/`starlette` 等）。
-  - 若使用数据库，请配置连接与初始化脚本（参考 `models.py` 与实际部署方案）。
+  - 如使用数据库，请配置连接与初始化脚本（参考 `models.py` 与实际部署方案）。
 - 启动服务：
   - 方式一（开发模式）：执行上述 `uvicorn` 命令；打开浏览器访问预览地址。
   - 方式二（容器化）：根据 `docker-compose.yml` 调整环境变量后启动。
@@ -81,54 +82,120 @@
 
 ---
 
-## 5. 使用指南（含操作步骤）
+## 5. 模块说明与操作步骤
+
 ### 5.1 首页与导航
-- 打开 `http://127.0.0.1:8000/` 进入首页，在导航栏选择不同功能页面：拓扑图、连接管理、设备管理、分析看板等。
+- 模块目标：统一入口与导航，快速到达各功能页面。
+- 入口：`/` 或首页导航栏。
+- 前置条件：用户已登录或具备访问权限（若开启鉴权）。
+- 操作步骤：
+  - 在导航栏选择“拓扑图”“连接管理”“设备管理”“生命周期管理”“分析看板”等。
+  - 使用搜索框快速定位设备或页面功能。
+- 错误提示：若页面无法加载，检查后端服务与浏览器控制台报错。
 
-### 5.2 设备级拓扑
-- 进入路径：导航 → 拓扑图 → 设备级。
-- 显示模式：
-  - 标准模式：节点标签为两行（通过 `\n` 断行），可自由拖拽单节点。
-  - 总线模式：分层栅格布局，单节点拖拽不影响整图；边线为直线、便于阅读。
-- 常用操作：
-  - 搜索设备：输入关键字筛选，支持中文名称与别名。
-  - 拖拽调整：按住节点拖拽至目标位置，系统保持稳定坐标，不会牵动其他节点。
-  - 重置布局（建议实现按钮）：恢复默认栅格布局或保存的用户布局。
+### 5.2 设备管理
+- 模块目标：维护设备台账、标准命名与图标绑定。
+- 入口：导航 → 设备管理（或首页入口）。
+- 前置条件：资产管理员或系统管理员权限。
+- 操作步骤：
+  - 新增设备：填写名称、类型、位置、图标/分组后保存。
+  - 编辑设备：更新属性（名称、别名、图标、分组等）。
+  - 删除设备：确认无关联连接后执行删除。
+  - 批量导入：按模板准备 CSV/Excel，经校验后导入。
+- 字段说明：
+  - 名称/别名：建议唯一且规范，便于检索与拓扑展示。
+  - 类型：如 UPS、变压器、配电柜等（参考数据字典）。
+  - 图标：绑定至 `static/device_icons/` 或 `static/default_icons/`。
+- 错误提示：
+  - 名称重复或不规范；删除设备仍存在连接引用；导入字段缺失或映射失败。
 
-### 5.3 端口级拓扑
-- 进入路径：导航 → 拓扑图 → 端口级。
-- 显示内容：展示端口与连接关系，适合排障与精细化检查。
-- 操作步骤：支持筛选端口、查看连接详情、局部拖拽微调。
+### 5.3 连接管理
+- 模块目标：维护设备间连接信息，支撑端口级与设备级拓扑。
+- 入口：导航 → 连接管理。
+- 前置条件：运维工程师或以上权限。
+- 操作步骤：
+  - 新增连接：选择源设备/端口与目标设备/端口，填写标签后保存。
+  - 编辑连接：调整端口/标签或状态；避免重复连接。
+  - 删除连接：确认无需保留后执行删除，避免孤立端口。
+  - 批量导入：按连接模板导入，系统进行唯一性与有效性校验。
+- 字段说明：
+  - 端口方向/容量：用于校验连通性与拓扑展示属性。
+  - 标签：连接用途或编号说明（简洁可读）。
+- 错误提示：设备或端口不存在、连接重复、端口方向不匹配。
 
-### 5.4 连接管理
-- 进入路径：导航 → 连接管理。
-- 功能：查看与维护设备间连接信息；支持新增、删除与批量导入（需管理员权限）。
-- 操作提示：新增连接需双方设备与端口有效且唯一；重复连接会提示冲突。
+### 5.4 设备级拓扑
+- 模块目标：以设备为粒度展示连接关系与结构布局。
+- 入口：导航 → 拓扑图 → 设备级。
+- 前置条件：基础设备与连接已维护。
+- 操作步骤：
+  - 切换模式：在“标准/总线模式”间切换。
+  - 搜索与筛选：按名称/类型过滤节点；支持别名。
+  - 拖拽微调：单节点拖拽不牵动整图（总线模式）；可重置布局。
+  - 保存布局（如提供）：保存自定义坐标以便复用。
+- 字段说明：两行标签采用 `\n` 断行，避免过长文本影响可读性。
+- 错误提示：渲染缓慢时，减少节点/边或按子系统拆分展示。
 
-### 5.5 设备管理
-- 进入路径：导航 → 设备管理。
-- 功能：查看设备台账、编辑设备属性、绑定图标与分组。
-- 操作提示：设备名称与唯一标识需符合规范；删除设备需检查是否存在关联连接。
+### 5.5 端口级拓扑
+- 模块目标：以端口为粒度展示精细连接关系，适合排障。
+- 入口：导航 → 拓扑图 → 端口级。
+- 前置条件：端口信息与连接已维护。
+- 操作步骤：
+  - 筛选端口：按设备/端口名称筛选。
+  - 查看详情：点击边或端口查看属性与连接路径。
+  - 局部拖拽：微调端口位置以改善可读性。
+- 错误提示：无效端口或缺少连接将导致渲染不完整。
 
-### 5.6 数据导入与校验
-- 入口：导航 → 导入（如存在）或通过管理工具脚本。
-- 要点：导入前先进行字段映射与校验；过滤无效设备名（空/NULL/nan 等）。
-- 成功导入后，可在拓扑页与管理页查看更新结果。
+### 5.6 设备生命周期管理
+- 模块目标：记录设备从建档到退役的各类事件与状态变更。
+- 入口：导航 → 生命周期管理（`templates/lifecycle_management.html`）。
+- 支持事件类型：建档、安装、投运、巡检、维保、故障、更换、升级、停用、退役、报废。
+- 前置条件：资产管理员或运维工程师权限（按事件类型设定审批流）。
+- 操作步骤：
+  - 新增事件：选择设备 → 选择事件类型 → 填写起止时间、责任人、描述、附件（可选）→ 保存。
+  - 编辑事件：修订时间或描述；必要时补充附件与责任人。
+  - 状态变更：如“退役”事件生效后系统可限制新连接创建（按配置）。
+  - 查询与导出：按设备、事件类型与时间范围过滤，支持导出报表。
+- 字段说明：
+  - 设备：台账内唯一设备。
+  - 事件类型：标准枚举（可在数据字典中扩展）。
+  - 起止时间：支持单点或区间；需晚于建档时间。
+  - 附件：验收单、巡检记录、维保工单、故障照片等。
+- 校验与规则：
+  - 设备必须存在且未删除；退役后禁止新增连接（如启用约束）。
+  - 时间合法性校验（不可逆序）；同一设备的生命周期事件需遵循合理顺序。
+  - 更换事件可记录旧设备与新设备的关联关系与影响范围。
+- 错误提示：非法时间、设备不存在、事件类型无效、附件格式不支持。
 
-### 5.7 分析看板（如启用）
-- 展示设备健康与连接质量统计；支持趋势与报表导出。
+### 5.7 数据导入与校验
+- 模块目标：批量导入设备与连接数据，并进行前置校验。
+- 入口：导航 → 导入（如提供）或管理工具脚本。
+- 前置条件：准备好模板文件，字段映射符合规范。
+- 操作步骤：
+  - 准备数据：使用模板（参考《导入校验与映射报告模板.md》《字段字典与别名映射.md》）。
+  - 字段映射：设置名称、类型、位置、端口方向/容量等映射。
+  - 质量校验：过滤空/NULL/nan；检查重复与唯一性约束；生成校验报告。
+  - 试导入（可选）：Dry-run 验证影响范围与统计。
+  - 正式导入：执行导入并记录日志，异常项回滚或进入待处理队列。
+- 错误提示：映射失败、唯一性冲突、无效字段、数据类型错误。
+
+### 5.8 分析看板
+- 模块目标：展示设备总量、接入率、断连率、变更统计、巡检/维保待办等指标与趋势。
+- 入口：导航 → 分析看板。
+- 操作步骤：选择时间范围与过滤条件；查看图表与报表；导出报表（如提供）。
+- 错误提示：数据源不完整或时间范围选择不当会影响统计结果。
 
 ---
 
 ## 6. 权限与安全
-- 角色建议：管理员、运维、观察者。
-- 权限边界：
-  - 管理员：可修改拓扑、导入数据、配置系统。
-  - 运维：可编辑设备与连接的业务属性，拖拽布局微调。
-  - 观察者：只读访问，不可更改数据。
+- 角色与权限：
+  - 系统管理员：全局配置、权限管理、导入审批、拓扑策略配置。
+  - 资产管理员：设备台账与生命周期事件维护与审核。
+  - 运维工程师：连接维护、拓扑微调、生命周期事件记录。
+  - 观察者/审计：只读访问。
 - 安全策略：
   - 输入校验与过滤（避免无效设备名与隐式补节点）。
-  - 操作日志记录与异常追踪（`topology_error_tracker.py` 与 `logs/topology_errors.log`）。
+  - 操作日志与异常追踪（`topology_error_tracker.py`、`logs/topology_errors.log`）。
+  - 数据备份与回退策略（建议定期备份与版本记录）。
 
 ---
 
@@ -137,8 +204,8 @@
   - 设备：`id`、`name`、`type`、`location`、`icon`、`created_at` 等。
   - 端口：`id`、`device_id`、`name`、`direction`、`capacity` 等。
   - 连接：`id`、`source_device_id`、`target_device_id`、`label`、`port_pair` 等。
-- 关联关系：设备与端口一对多、连接指向设备对。
-- 约束与规则：连接生成前需验证双方设备有效，避免“隐式补节点”。
+- 关联关系：设备与端口一对多；连接指向设备对。
+- 约束与规则：连接生成前需验证设备有效与端口唯一性，避免“隐式补节点”。
 
 ---
 
@@ -152,47 +219,34 @@
 ---
 
 ## 9. 常见问题与故障排除
-- 问题：设备级标准模式标签不换行。
-  - 处理：改用 `\n` 作为断行；确认 `formatTwoLineLabel` 在 `toVisData()` 中生效。
-- 问题：总线模式拖拽节点导致整图移动。
-  - 处理：关闭 `layout.hierarchical` 与 `physics`，采用 BFS 分层栅格布局，仅保留 `interaction.dragNodes=true`；禁用 `edges.smooth`。
-- 问题：出现 `nan` 设备节点。
-  - 处理：后端过滤无效设备名；前端渲染前再过滤，避免渲染异常节点。
-- 问题：页面渲染缓慢或卡顿。
-  - 处理：检查节点/边数量与浏览器性能；对长标签做两行限制；必要时按子系统拆分拓扑。
+- 标签不换行：使用 `\n` 断行；确认 `formatTwoLineLabel` 在 `toVisData()` 中生效。
+- 总线模式拖拽牵动整图：关闭 `layout.hierarchical` 与 `physics`，采用 BFS 分层栅格；仅保留 `interaction.dragNodes=true`；禁用 `edges.smooth`。
+- 出现 `nan` 设备节点：后端与前端均需过滤无效名称。
+- 渲染缓慢或卡顿：减少节点/边数量、限制标签长度、按子系统拆分展示。
 
 ---
 
 ## 10. 版本信息
 - 版本：V1.0
-- 主要特性：设备级/端口级拓扑展示、两行标签优化、总线栅格布局、连接管理与基础数据导入。
+- 主要特性：设备级/端口级拓扑展示、两行标签优化、总线栅格布局、连接管理、设备生命周期管理与数据导入。
 - 已知限制：大规模拓扑下渲染速度受浏览器与硬件限制影响；后续可引入增量渲染与虚拟化技术。
 
 ---
 
 ## 11. 软著一致性清单（提交前核对）
-- 名称一致：
-  - 软件全称、简称、版本号在所有材料（登记表、用户手册、源代码页眉）保持一致。
-- 页眉与页码：
-  - 建议在导出 PDF 前设置页眉为“动力资源管理系统 V1.0”，右上角显示页码“第 X 页 / 共 Y 页”。
-- PDF导出建议：
-  - 字体：宋体小四；行距：1.5 倍；每页不少于约 30 行文字（用户手册）。
-  - 源代码材料：连续前 30 页与后 30 页，每页约 50 行；不足 60 页则提交全文。
-- 截图与说明：
-  - 建议在“使用指南”章节加入关键页面截图（首页、设备级拓扑、端口级拓扑、连接管理），并配文字说明；截图与文字的软件名称须与登记一致。
-- 合作与委托：
-  - 多人开发需提供合作开发协议；委托开发需提供委托证明与公章。
-- 开发完成日期：
-  - 与登记信息保持一致；所有材料中日期统一。
+- 名称一致：软件全称、简称、版本号在所有材料（登记表、用户手册、源代码页眉）保持一致。
+- 页眉与页码：建议在导出 PDF 前设置页眉为“动力资源管理系统 V1.0”，右上角显示页码“第 X 页 / 共 Y 页”。
+- PDF 导出：宋体小四、行距 1.5 倍；用户手册每页不少于约 30 行；源代码材料前 30 页与后 30 页，每页约 50 行；不足 60 页则提交全文。
+- 截图与说明：建议在“模块说明”加入关键页面截图（首页、设备级拓扑、端口级拓扑、连接管理、生命周期管理），并配文字说明；名称须与登记一致。
+- 合作与委托：多人开发需合作开发协议；委托开发需委托证明与公章。
+- 开发完成日期：与登记信息保持一致；所有材料日期统一。
 
 ---
 
 ## 12. 附录
 - 名词解释与缩写表。
-- 参考资料（非官方、供审查辅助）：
-  - 软著材料要求的行业文章与平台说明（文档与源代码页数、行数规范；以版权中心在线填报页面最新指引为准）。
-- 联系与支持：
-  - 运维与技术支持联系人、邮箱与电话（请补全）。
+- 参考资料（非官方、供审查辅助）：软著材料要求的行业文章与平台说明（以版权中心在线填报页面最新指引为准）。
+- 联系与支持：运维与技术支持联系人、邮箱与电话（请补全）。
 
 ---
 
