--- a/docs/错误与经验记录.md
+++ b/docs/错误与经验记录.md
@@ -1,5 +1,21 @@
 错误与经验记录（持续更新）
-
+## 2025-11-07 用户手册修订要点（记录）
+- 问题与原因：
+  - 用户角色与权限描述与实际使用场景不完全一致（过于笼统）。
+  - 软件功能介绍遗漏“设备生命周期管理”模块。
+  - 各模块操作与字段说明不够细化，审查材料可读性不佳。
+- 处理与修正：
+  - 参考《说明文档模板（最新版）.docx》，重构手册结构，明确角色模型与权限边界（系统管理员、资产管理员、运维工程师、观察者/审计）。
+  - 新增并细化“设备生命周期管理”模块（事件类型、校验规则、操作步骤、附件管理）。
+  - 按模块补充标准化小节：模块目标、入口、前置条件、操作步骤、字段说明、错误提示。
+  - 更正本地预览地址为 `http://127.0.0.1:8000/topology`，避免与运行端口不一致（此前文档为 8009）。
+- 风险控制：
+  - 文档修订与代码无耦合变更；提交时仅包含文档修改，避免影响运行环境。
+  - 保留原修订记录，便于软著审查的版本追踪。
+- 后续建议：
+  - 在“模块说明”章节补充关键页面截图与示例数据；
+  - 与登记信息统一软件名称、版本号与日期；
+  - 若引入鉴权模块，补充登录与角色配置的操作流程与截图。
 记录原则
 - 重要错误与异常必须记录：错误现象、原因分析、定位过程、修复方案、验证结果、回退预案。
 - 重要操作与经验必须记录：要点、注意事项、通用解决路径，避免重复犯错与重复劳动。
