docs: 修正用户手册并生成Word版本

--- a/docs/动力资源管理系统用户手册.md
+++ b/docs/动力资源管理系统用户手册.md
@@ -1,7 +1,7 @@
 # 动力资源管理系统用户手册（软著申请版）
 
 文档编号：DRMS-UM-001  
-文档版本：V1.0  
+文档版本：V1.1
 软件全称：动力资源管理系统 V1.0  
 申请主体：邱立胜  
 著作权人：邱立胜  
@@ -12,12 +12,13 @@
 ## 修订记录
 - 2025-11-06：V1.0 首版，覆盖系统概述、架构、安装部署、使用指南、数据模型、接口概览、故障排除与软著一致性清单。
 - 2025-11-07：V1.0 修订，对齐角色模型，新增设备生命周期管理模块，细化各模块操作步骤，并更正本地预览地址。
+- 2025-11-08：V1.1 修订，根据代码事实，修正权限模型描述，统一模块名称（“统计分析”），并更新相关操作前提条件。
 
 ---
 
 ## 1. 引言
 - 文档目的：本手册面向系统最终用户与审查人员，完整说明动力资源管理系统的功能、操作方法、技术架构与运行环境，并作为计算机软件著作权登记的“文档鉴别材料”。
-- 读者对象：项目利益相关者（系统管理员、资产管理员、运维工程师、观察者/审计、审查人员、实施与客服人员）。
+- 读者对象：项目利益相关者（管理员、普通用户、审查人员、实施与客服人员）。
 - 适用范围：适用于 V1.0 版本的网页端系统；若版本更新，请同步更新本手册以保持一致性。
 - 术语与缩写：
   - 设备：供电相关设备，如配电柜、蓄电池、开关电源、UPS、变压器等。
@@ -34,15 +35,14 @@
   - 提供端口级与设备级两种拓扑视图，便于排障与运维协同。
   - 支持数据导入、连接维护与基础分析，提升运维效率与准确性。
 - 用户角色与权限边界：
-  - 系统管理员：账号与权限配置、系统参数、数据字典与备份；审批批量导入与全局变更；可配置拓扑全局策略。
-  - 资产管理员：设备台账维护、标准命名、图标绑定与分组；审核生命周期事件（建档/退役等）；可批量导入设备数据。
-  - 运维工程师：拓扑查看与维护、连接管理、端口级检查与布局微调；记录维保/故障/更换等生命周期事件。
-  - 观察者/审计：只读查看拓扑与报表，无法修改数据；用于验收与审计场景。
-- 业务范围：设备管理、连接管理、拓扑展示（设备级、端口级）、设备生命周期管理、分析看板、数据导入与校验。
+  - 本系统采用简化的两级权限模式，不设复杂的多用户角色体系。
+  - **管理员**：通过输入全局唯一的管理员密码，可以执行所有写入操作，包括设备的增删改、连接管理、生命周期事件记录、数据导入等。拥有系统的完全控制权。
+  - **普通用户**：无需密码即可访问系统，但仅限于查看所有数据，包括设备信息、拓扑图、统计分析等。任何尝试修改数据的操作都将触发密码验证。
+- 业务范围：设备管理、连接管理、拓扑展示（设备级、端口级）、设备生命周期管理、统计分析、数据导入与校验。
 - 非功能性目标：
   - 性能：常规规模（千级节点、万级边以内）可正常渲染与交互。
   - 可用性：操作直观，支持拖拽与筛选；关键操作有提示与确认。
-  - 安全性：分权访问；仅有权限的角色可变更拓扑与基础数据。
+  - 安全性：写操作受密码保护；所有用户默认拥有只读权限。
   - 可维护性：代码与文档一致；拓扑交互可控，支持坐标固定与布局回退策略。
 
 ---
@@ -77,7 +77,7 @@
   - 方式一（开发模式）：执行上述 `uvicorn` 命令；打开浏览器访问预览地址。
   - 方式二（容器化）：根据 `docker-compose.yml` 调整环境变量后启动。
 - 配置项：
-  - `config.py`：基础配置与环境变量读取（如 API 路径、日志设置）。
+  - `config.py`：基础配置与环境变量读取（如 `ADMIN_PASSWORD`、API 路径、日志设置）。
   - 静态资源：`static/` 目录包含 CSS 与 JS；`icons.svg`、`device_icons/` 用于设备图标配置。
 
 ---
@@ -87,16 +87,16 @@
 ### 5.1 首页与导航
 - 模块目标：统一入口与导航，快速到达各功能页面。
 - 入口：`/` 或首页导航栏。
-- 前置条件：用户已登录或具备访问权限（若开启鉴权）。
+- 前置条件：无，所有用户均可访问。
 - 操作步骤：
-  - 在导航栏选择“拓扑图”“连接管理”“设备管理”“生命周期管理”“分析看板”等。
+  - 在导航栏选择“拓扑图”“连接管理”“设备管理”“生命周期管理”“统计分析”等。
   - 使用搜索框快速定位设备或页面功能。
 - 错误提示：若页面无法加载，检查后端服务与浏览器控制台报错。
 
 ### 5.2 设备管理
 - 模块目标：维护设备台账、标准命名与图标绑定。
 - 入口：导航 → 设备管理（或首页入口）。
-- 前置条件：资产管理员或系统管理员权限。
+- 前置条件：需要管理员权限（执行操作时需输入密码）。
 - 操作步骤：
   - 新增设备：填写名称、类型、位置、图标/分组后保存。
   - 编辑设备：更新属性（名称、别名、图标、分组等）。
@@ -112,7 +112,7 @@
 ### 5.3 连接管理
 - 模块目标：维护设备间连接信息，支撑端口级与设备级拓扑。
 - 入口：导航 → 连接管理。
-- 前置条件：运维工程师或以上权限。
+- 前置条件：需要管理员权限（执行操作时需输入密码）。
 - 操作步骤：
   - 新增连接：选择源设备/端口与目标设备/端口，填写标签后保存。
   - 编辑连接：调整端口/标签或状态；避免重复连接。
@@ -149,7 +149,7 @@
 - 模块目标：记录设备从建档到退役的各类事件与状态变更。
 - 入口：导航 → 生命周期管理（`templates/lifecycle_management.html`）。
 - 支持事件类型：建档、安装、投运、巡检、维保、故障、更换、升级、停用、退役、报废。
-- 前置条件：资产管理员或运维工程师权限（按事件类型设定审批流）。
+- 前置条件：需要管理员权限（执行操作时需输入密码）。
 - 操作步骤：
   - 新增事件：选择设备 → 选择事件类型 → 填写起止时间、责任人、描述、附件（可选）→ 保存。
   - 编辑事件：修订时间或描述；必要时补充附件与责任人。
@@ -178,20 +178,19 @@
   - 正式导入：执行导入并记录日志，异常项回滚或进入待处理队列。
 - 错误提示：映射失败、唯一性冲突、无效字段、数据类型错误。
 
-### 5.8 分析看板
+### 5.8 统计分析
 - 模块目标：展示设备总量、接入率、断连率、变更统计、巡检/维保待办等指标与趋势。
-- 入口：导航 → 分析看板。
+- 入口：导航 → 统计分析。
 - 操作步骤：选择时间范围与过滤条件；查看图表与报表；导出报表（如提供）。
 - 错误提示：数据源不完整或时间范围选择不当会影响统计结果。
 
 ---
 
 ## 6. 权限与安全
-- 角色与权限：
-  - 系统管理员：全局配置、权限管理、导入审批、拓扑策略配置。
-  - 资产管理员：设备台账与生命周期事件维护与审核。
-  - 运维工程师：连接维护、拓扑微调、生命周期事件记录。
-  - 观察者/审计：只读访问。
+- 权限模型：
+  - 系统采用基于单一管理员密码的访问控制机制。
+  - **管理员权限**：所有写入操作（如增、删、改）均受密码保护。用户在执行这些操作时，系统会弹出对话框要求输入在 `config.py` 中配置的 `ADMIN_PASSWORD`。
+  - **只读访问**：所有用户默认拥有只读权限，可以自由浏览和查看系统中的所有数据，无需进行身份验证。
 - 安全策略：
   - 输入校验与过滤（避免无效设备名与隐式补节点）。
   - 操作日志与异常追踪（`topology_error_tracker.py`、`logs/topology_errors.log`）。
@@ -213,7 +212,7 @@
 - `/api/topology/global`：获取全局设备拓扑数据（过滤无效设备名）。
 - `/api/topology/device`：获取设备级拓扑数据（含节点与边信息）。
 - `/api/topology/ports`：获取端口级拓扑数据。
-- `/api/connections`：查询或维护连接信息（需权限）。
+- `/api/connections`：查询或维护连接信息（需管理员权限）。
 - 说明：实际接口以后端实现与 `main.py` 路由为准。
 
 ---
