docs: 修正用户手册角色权限和模块名称，并重新生成Word文档

--- a/docs/动力资源管理系统用户手册.md
+++ b/docs/动力资源管理系统用户手册.md
@@ -36,8 +36,8 @@
   - 支持数据导入、连接维护与基础分析，提升运维效率与准确性。
 - 用户角色与权限边界：
   - 本系统采用简化的两级权限模式，不设复杂的多用户角色体系。
-  - **管理员**：通过输入全局唯一的管理员密码，可以执行所有写入操作，包括设备的增删改、连接管理、生命周期事件记录、数据导入等。拥有系统的完全控制权。
-  - **普通用户**：无需密码即可访问系统，但仅限于查看所有数据，包括设备信息、拓扑图、统计分析等。任何尝试修改数据的操作都将触发密码验证。
+  - **管理员**：通过输入全局唯一的管理员密码，可以执行所有写入操作，包括设备的增删改、连接管理、生命周期事件记录、数据导入等，拥有系统的完全控制权。
+  - **普通用户**：无需密码即可访问系统，但仅限于查看所有数据，包括设备管理、拓扑图、统计分析等。任何尝试修改数据的操作都将触发密码验证。
 - 业务范围：设备管理、连接管理、拓扑展示（设备级、端口级）、设备生命周期管理、统计分析、数据导入与校验。
 - 非功能性目标：
   - 性能：常规规模（千级节点、万级边以内）可正常渲染与交互。
@@ -179,10 +179,12 @@
 - 错误提示：映射失败、唯一性冲突、无效字段、数据类型错误。
 
 ### 5.8 统计分析
-- 模块目标：展示设备总量、接入率、断连率、变更统计、巡检/维保待办等指标与趋势。
-- 入口：导航 → 统计分析。
-- 操作步骤：选择时间范围与过滤条件；查看图表与报表；导出报表（如提供）。
-- 错误提示：数据源不完整或时间范围选择不当会影响统计结果。
+- **功能描述**：提供设备数据的多维度统计和可视化分析，帮助用户快速了解资产概况、使用情况和生命周期分布。是数据驱动决策的关键工具。
+- **应用场景**：
+  - 查看各类设备的数量和占比。
+  - 分析设备在不同生命周期阶段的分布情况。
+  - 跟踪数据中心的容量和利用率趋势。
+- **操作前提**：无，所有用户均可查看。
 
 ---
 
